--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  i
-  <title>Frontend Mentor | Order summary card</title>
+  
+  <title>Frontend Mentor | Order summary card PARM</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
